{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 208,
  "lineage": "1ae42b4c-b7ca-acaf-8f44-9ea50c88b5d4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:906016811878:vpc/vpc-9516eef2",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-b16313d8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-dab2f5be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-9516eef2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-27b53640",
            "owner_id": "906016811878",
            "tags": {
              "kubernetes.io/cluster/customer-production": "shared",
              "kubernetes.io/cluster/customer-staging": "shared",
              "kubernetes.io/cluster/development": "shared",
              "kubernetes.io/cluster/eks-development": "shared",
              "kubernetes.io/cluster/production": "shared",
              "kubernetes.io/cluster/staging": "shared",
              "sprinto": "prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f8acd418785369b",
            "arn": "arn:aws:ec2:us-west-2:906016811878:instance/i-07f456e7ac43fb950",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "flask-app-ecr-profile",
            "id": "i-07f456e7ac43fb950",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0183318071c46f58b",
            "private_dns": "ip-172-31-32-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.11",
            "public_dns": "ec2-44-244-249-94.us-west-2.compute.amazonaws.com",
            "public_ip": "44.244.249.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:906016811878:key/c2e5c681-8b07-4657-b54b-1d4ff5c74b82",
                "throughput": 125,
                "volume_id": "vol-087c9e7a93e26a86d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_ssh_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-837f41f5",
            "tags": {
              "Name": "Flask app machine"
            },
            "tags_all": {
              "Name": "Flask app machine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04179e2fc0089442e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ecr_access",
            "aws_iam_role.ecr_access_role",
            "aws_kms_key.ebs_encryption",
            "aws_security_group.flask_security_group",
            "data.aws_ami.ubuntu",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:906016811878:security-group/sg-04179e2fc0089442e",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-04179e2fc0089442e",
            "ingress": [],
            "name": "allow_ssh_tls",
            "name_prefix": "",
            "owner_id": "906016811878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flask_security_group"
            },
            "tags_all": {
              "Name": "flask_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-9516eef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:906016811878:security-group-rule/sgr-04a6f177cbb0e6c5e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04a6f177cbb0e6c5e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04179e2fc0089442e",
            "security_group_rule_id": "sgr-04a6f177cbb0e6c5e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.flask_security_group",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_flask_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:906016811878:security-group-rule/sgr-0a6d0c873961057fa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8081,
            "id": "sgr-0a6d0c873961057fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04179e2fc0089442e",
            "security_group_rule_id": "sgr-0a6d0c873961057fa",
            "tags": null,
            "tags_all": {},
            "to_port": 8081
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.flask_security_group",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:906016811878:security-group-rule/sgr-0cd128849a5c51791",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0cd128849a5c51791",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04179e2fc0089442e",
            "security_group_rule_id": "sgr-0cd128849a5c51791",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.flask_security_group",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}